--- a/try.html
+++ b/try.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>I have created a new repo </h2>
+    <h2 class="test">I have created a new repo </h2>
+    <h3 class="test">Now I have edited it</h3>
 </body>
 </html>
