--- a/try.html
+++ b/try.html
@@ -10,5 +10,6 @@
 <body>
     <h2 class="test">I have created a new repo </h2>
     <h3 class="test">Now I have edited it</h3>
+    <h1>now I'm switching to git bash</h1>
 </body>
 </html>
