image added in new branch

--- a/try.html
+++ b/try.html
@@ -11,5 +11,6 @@
     <h2 class="test">I have created a new repo </h2>
     <h3 class="test">Now I have edited it</h3>
     <h1>now I'm switching to git bash</h1>
+    <img src="only.png" alt="">
 </body>
 </html>
