another pic added in img branch

--- a/try.html
+++ b/try.html
@@ -12,5 +12,7 @@
     <h3 class="test">Now I have edited it</h3>
     <h1>now I'm switching to git bash</h1>
     <img src="only.png" alt="">
+    <p>another photo </p>
+    <img src="uthsa.jpg" alt="">
 </body>
 </html>
