--- a/try.html
+++ b/try.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h2 class="test">I have created a new repo </h2>
-    <h3 class="test">Now I have edited it</h3>
+    <h3 class="test">Now I have cancelled it</h3>
     <h1>now I'm switching to git bash</h1>
     <img src="only.png" alt="">
     <p>another photo </p>
