--- a/try.html
+++ b/try.html
@@ -10,6 +10,7 @@
 <body>
     <h2 class="test">I have created a new repo </h2>
     <h3 class="test">Now I have cancelled it</h3>
+    <p>just for check</p>
     <h1>now I'm switching to git bash</h1>
     <img src="only.png" alt="">
     <p>another photo </p>
